# mistral-mcp-hackathon

./: .env.example  CLAUDE.MD  DEPLOYMENT.md  LECHAT_HTTP_CONFIG.md  README.md  buildspec.yml  curl_output.txt  debug_apify.py  debug_http_server.py  debug_new_linkedin.py  demo_lambda_handler.py  lambda_handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_get_posts.py  test_http_server.py  test_lambda_handler.py  test_linkedin_posts.py  test_mcp_client.py  test_mcp_protocol.py  test_mcp_sse_client.py  test_mcp_tools.py  test_ngrok_mcp.py  test_sse_client.py  test_stdio_simple.py  test_tools_simple.py  tsconfig.json  validate_lechat_integration.py  vercel.json
.claude/agents/: ai-systems-architect.md  analysis.md  backend-architect.md  bug-hunter-engineer.md  frontend-architect.md  icp-keyword-analyzer.md  lint-build-fixer.md  production-deployment-engineer.md  prompt-engineer.md  qa-test-automation-engineer.md  sales-email-strategist.md  senior-code-reviewer.md  (+1 more)
api/: index.py
coldopen-coach/: .env.example  README.md  demo_usage.py  lambda_handler.py  linkedin_reidhoffman.json  main.py  pyproject.toml  requirements.txt  simple_test.py  test_apify_local.py  test_basic.py  test_linkedin_actor.py  test_mcp_servers.py  test_nossa_direct.py  test_real_mcp.py  test_servers.py  twitter_elonmusk.json
coldopen-coach/demo/: fetch_data.py  run_demo.py
coldopen-coach/mcp_servers/: social_data_server.py
coldopen-coach/mcp_servers/mcp_approach_coach/: server.py
coldopen-coach/mcp_servers/mcp_linkedin/: server.py
coldopen-coach/mcp_servers/mcp_x/: server.py
coldopen-coach/shared/: models.py  theme_inference.py
dockerfiles/: nodejs22  python3.13
shared/: models.py
social_mcp_server/: __init__.py  __main__.py  cli.py  cli_main.py  config.py  http_server.py  server.py
src/: config.ts  server.ts
(+18 files in other folders)
