[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coldopen-coach"
version = "0.1.0"
description = "MCP server collection for social media data fetching and conversation coaching"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "social-media", "linkedin", "twitter", "x", "apify"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "apify-client>=1.7.0",
    "fastmcp>=2.10.1",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "inquirer>=3.4.0",
    "keyring>=25.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
social-mcp-server = "social_mcp_server.cli_main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/mistral-mcp-hackathon"
"Bug Reports" = "https://github.com/yourusername/mistral-mcp-hackathon/issues"
"Source" = "https://github.com/yourusername/mistral-mcp-hackathon"

[tool.hatch.build.targets.wheel]
packages = ["social_mcp_server", "shared"]
